[build] Make 'commonizer-api' tests cacheable
^KTI-3240 fixed