@@ -5,6 +5,7 @@ plugins {
     id("gradle-plugin-published-compiler-dependency-configuration")
     id("project-tests-convention")
     id("native-bootstrap-distribution-provisioner")
+    id("test-inputs-check")
 }
 
 kotlin {
@@ -17,8 +18,7 @@ publish()
 dependencies {
     implementation(kotlinStdlib())
     implementation(project(":native:kotlin-native-utils"))
-    testImplementation(kotlinTest("junit"))
-    testImplementation(libs.junit4)
+    testImplementation(kotlinTest("junit5"))
     testImplementation(testFixtures(project(":compiler:tests-common")))
     testRuntimeOnly(project(":native:kotlin-klib-commonizer"))
     testImplementation(project(":kotlin-gradle-statistics"))
@@ -30,12 +30,18 @@ sourceSets {
 }
 
 projectTests {
-    testTask(parallel = true, jUnitMode = JUnitMode.JUnit4) {
-        workingDir = projectDir
+    testTask(jUnitMode = JUnitMode.JUnit5) {
         useProvidedNativeBootstrapDistribution { distribution ->
-            doFirst {
-                systemProperty("konan.home", distribution.get().root)
+            addClasspathProperty("konan.home") {
+                from(distribution.map { it.root })
             }
+        }
+
+        javaLauncher = getToolchainLauncherFor(JdkMajorVersion.JDK_21_0)
+        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+        testData(project.isolated, "testData")
+        testInputsCheck {
+            extraPermissions.add("""permission java.util.PropertyPermission "*", "read,write";""")
         }
     }
 }
